# wiener-poc

./: .gitignore  Cargo.toml  README.md  build.rs  numpy_wiener_reference.py  pyproject.toml  test.py
.github/workflows/: build.yml
cuda_kernels/: weiner.cu  wiener.cu
src/: cpu_wiener.rs  gpu_wiener.rs  lib.rs  wiener_common.rs
