[package]
name = "wiener_poc"
version = "0.1.0"
edition = "2021"

[lib]
name = "wiener_poc"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
numpy = "0.28.0"
cudarc = { version = "0.19.4", features = ["cuda-version-from-build-system"] }
multiversion = "0.8.0"

[build-dependencies]
cc = "1.2.61"
